News for package rnirs

##----------------- Version 1.8-0

- Function matpoly renamed to "inls"

- New functions

  kpls.nipals         Kernel PLS nipals (Rosipal & Trejo 2001) 
  kplsr               Kernel PLSR (using kpls.nipals)
  kplsda, kplsdalm    Kernel PLSDA (using kpls.nipals)
  kgram               Build kernel Gram matrices for direct kernel regressions


##----------------- Version 1.7-6

- New functions

    pcdalm    PCDA
    krr       Kernel ridge regression
    kpcr      Kernel PCR
    kpcda     Kernel PCDA
    kpcdalm   Kernel PCDA
    
    
##----------------- Version 1.7-5

- Overall code cleaning and consistency modifications


##----------------- Version 1.7-4

- Modification of functions pinv and lmridge


##----------------- Version 1.7-3

- New function: lmridge


##----------------- Version 1.7-2

- Internal modifications of functions pca, pcr, plsr, plsda, plsdalm


##----------------- Version 1.7-1

- New function: pca.eigenk

- Structural modification of functions pca.svd, pca.eigen and pca.eigen


##----------------- Version 1.7-0

- New functions:

    kpca    : Non-linear kernel PCA
  
    Kernel functions    : kpol, krbf
  
    matpoly   : Blocks for INLR regerssion model
    
    pcr     : PCR
    
    pcda    : PCDA (discrimination on principal components)
  
  
- Modification of function bcoef

- Internal modifications (output structure) of functions pca, pls, plsr, lwplsr, lwplsda, lwplsdalm

- New argument "colblocks" in functions blocscal, blockpls, blocksopca, blocksopls. 


##----------------- Version 1.6-18

- Internal modification of function pca (the default algorithm is now pca.eigen).

- Add of the argument "kernel" in pca.svd and pca.eigen (faster for wide matrices).


##----------------- Version 1.6-17

- Functions kenston and matdis have been made faster.

- Modification of functions scordis and odis: new argument "typcut".

- Modification of functions pca.rob (in step2) and out.pca.
