@@ -1,9 +1,15 @@
-pca.rob <- function(X, ncomp, nsim = 1500, alpha = .70, step2 = TRUE, ...) {
+pca.rob <- function(X, ncomp, nsim = 1500, alpha = .70, step2 = TRUE, 
+                    weights = NULL, ...) {
     
   X <- .matrix(X)
   zdim <- dim(X)
   n <- zdim[1]
   p <- zdim[2]
+  
+  if(is.null(weights))
+    weights <- rep(1 / n, n)
+  else
+    weights <- weights / sum(weights)  
   
   if(n < p)
     algo <- pca.eigenk
@@ -18,14 +24,14 @@ pca.rob <- function(X, ncomp, nsim = 1500, alpha = .70, step2 = TRUE, ...) {
   
   w <- w1 * w2
 
-  fm <- algo(X, ncomp = ncomp, weights = w)
+  fm <- algo(X, ncomp = ncomp, weights = weights * w)
   
   if(step2) {
     
-    r <- out.mva(fm, X, ...)
+    r <- out.sdod(fm, X, ...)
     w <- .talworth(r, 1)
     
-    fm <- algo(X, ncomp = ncomp, weights = w)
+    fm <- algo(X, ncomp = ncomp, weights = weights * w)
     
     }
   
